--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "dotenv": "^16.0.1",
+    "bulma": "^0.9.4",
+    "npm": "^8.12.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
